fixes evaluation so that it uses test set.

--- a/review-prediction.ipynb
+++ b/review-prediction.ipynb
@@ -62,16 +62,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(848766, 0.9932478445178059, 0.9932478445178059)"
+       "(848767, 0.6202220397352866, 0.6202220397352866)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,14 +81,14 @@
     "\n",
     "model = fasttext.train_supervised(\n",
     "    'data/Amazon-Movie-TV-Reviews/data.train.txt',\n",
-    "    lr=0.5,\n",
+    "    lr=0.8,\n",
     "    epoch=20,\n",
     "    minCount=3,\n",
     "    #dim=50,\n",
     "    #maxn=3,\n",
     "    wordNgrams=2,\n",
     ")\n",
-    "model.test('data/Amazon-Movie-TV-Reviews/data.train.txt')"
+    "model.test('data/Amazon-Movie-TV-Reviews/data.test.txt')"
    ]
   }
  ],
