--- a/review-prediction.ipynb
+++ b/review-prediction.ipynb
@@ -40,7 +40,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def save2fastText(train_test_split=0.5):\n",
+    "from re import findall\n",
+    "\n",
+    "\n",
+    "def clean_review(review_text):\n",
+    "    clean = ' '.join(findall(r'\\w+', review_text.lower()))\n",
+    "    return clean\n",
+    "\n",
+    "\n",
+    "def transform_rating(rating_string):\n",
+    "    rating_int = int(rating_string)\n",
+    "    if rating_int < 3:\n",
+    "        new_rating = 1\n",
+    "    elif rating_int > 3:\n",
+    "        new_rating = 3\n",
+    "    else:\n",
+    "        new_rating = 2\n",
+    "    return new_rating\n",
+    "\n",
+    "\n",
+    "def save2fastText(train_test_split=0.9):\n",
     "    with open('data/Amazon-Movie-TV-Reviews/movie-tv-reviews.json', 'r') as f:\n",
     "        data = f.readlines()\n",
     "    shuffle(data)\n",
@@ -49,12 +68,16 @@
     "    with open('data/Amazon-Movie-TV-Reviews/data.train.txt', 'w') as f:\n",
     "        for x in train:\n",
     "            j = loads(x)\n",
-    "            f.write('__label__{} {}\\n'.format(int(j['overall']), j['reviewText']))\n",
+    "            f.write('__label__{} {}\\n'.format(\n",
+    "                transform_rating(j['overall']),\n",
+    "                clean_review(j['reviewText'])))\n",
     "    test = data[int(len(data)*train_test_split):]\n",
     "    with open('data/Amazon-Movie-TV-Reviews/data.test.txt', 'w') as f:\n",
     "        for x in test:\n",
     "            j = loads(x)\n",
-    "            f.write('__label__{} {}\\n'.format(int(j['overall']), j['reviewText']))\n",
+    "            f.write('__label__{} {}\\n'.format(\n",
+    "                transform_rating(j['overall']),\n",
+    "                clean_review(j['reviewText'])))\n",
     "\n",
     "\n",
     "save2fastText()"
@@ -62,16 +85,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(848767, 0.6202220397352866, 0.6202220397352866)"
+       "(169754, 0.8351850324587344, 0.8351850324587344)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,12 +104,12 @@
     "\n",
     "model = fasttext.train_supervised(\n",
     "    'data/Amazon-Movie-TV-Reviews/data.train.txt',\n",
-    "    lr=0.8,\n",
-    "    epoch=20,\n",
-    "    minCount=3,\n",
+    "    #lr=0.8,\n",
+    "    #epoch=20,\n",
+    "    #minCount=10,\n",
     "    #dim=50,\n",
     "    #maxn=3,\n",
-    "    wordNgrams=2,\n",
+    "    #wordNgrams=3,\n",
     ")\n",
     "model.test('data/Amazon-Movie-TV-Reviews/data.test.txt')"
    ]
