renames review-prediction.ipynb -> sentiment-film-tv-reviews.ipynb and avoids recreating fasttext data.

--- a/sentiment-film-tv-reviews.ipynb
+++ b/sentiment-film-tv-reviews.ipynb
@@ -49,6 +49,11 @@
     "\n",
     "\n",
     "def transform_rating(rating_string):\n",
+    "    \"\"\"\n",
+    "    1 & 2 stars -> 1\n",
+    "    3 stars     -> 2\n",
+    "    4 & 5 stars -> 3\n",
+    "    \"\"\"\n",
     "    rating_int = int(rating_string)\n",
     "    if rating_int < 3:\n",
     "        new_rating = 1\n",
@@ -60,6 +65,9 @@
     "\n",
     "\n",
     "def save2fastText(train_test_split=0.9):\n",
+    "    if os.path.isfile('data/Amazon-Movie-TV-Reviews/data.train.txt') and \\\n",
+    "        os.path.isfile('data/Amazon-Movie-TV-Reviews/data.test.txt'):\n",
+    "        return\n",
     "    with open('data/Amazon-Movie-TV-Reviews/movie-tv-reviews.json', 'r') as f:\n",
     "        data = f.readlines()\n",
     "    shuffle(data)\n",
@@ -91,7 +99,7 @@
     {
      "data": {
       "text/plain": [
-       "(169754, 0.8351850324587344, 0.8351850324587344)"
+       "(169754, 0.8376886553483276, 0.8376886553483276)"
       ]
      },
      "execution_count": 3,
@@ -131,7 +139,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
